Refactor action classes to implement singleton pattern and update Action interface to include ActionContext. This change enhances thread-safety and memory efficiency across various transaction and streaming actions in the StatementService.