@@ -36,7 +36,6 @@ import org.openjproxy.grpc.dto.OpQueryResult;
 import org.openjproxy.grpc.dto.Parameter;
 import org.openjproxy.grpc.server.lob.LobProcessor;
 import org.openjproxy.grpc.server.pool.ConnectionPoolConfigurer;
-import org.openjproxy.grpc.server.pool.DataSourceConfigurationManager;
 import org.openjproxy.grpc.server.resultset.ResultSetWrapper;
 import org.openjproxy.grpc.server.statement.ParameterHandler;
 import org.openjproxy.grpc.server.statement.StatementFactory;
@@ -45,8 +44,6 @@ import org.openjproxy.grpc.server.utils.MethodNameGenerator;
 import org.openjproxy.grpc.server.utils.MethodReflectionUtils;
 import org.openjproxy.grpc.server.utils.SessionInfoUtils;
 import org.openjproxy.grpc.server.utils.StatementRequestValidator;
-import org.openjproxy.grpc.server.utils.UrlParser;
-import org.openjproxy.grpc.server.xa.XADataSourceFactory;
 import org.openjproxy.xa.pool.XABackendSession;
 import org.openjproxy.xa.pool.XATransactionRegistry;
 import org.openjproxy.xa.pool.XidKey;
@@ -77,11 +74,9 @@ import java.sql.Types;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.Properties;
 import java.util.ServiceLoader;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
@@ -107,90 +102,89 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
     private final Map<String, XATransactionRegistry> xaRegistries = new ConcurrentHashMap<>();
     private final SessionManager sessionManager;
     private final CircuitBreaker circuitBreaker;
-    
+
     // Per-datasource slow query segregation managers
     private final Map<String, SlowQuerySegregationManager> slowQuerySegregationManagers = new ConcurrentHashMap<>();
-    
+
     // Server configuration for creating segregation managers
     private final ServerConfiguration serverConfiguration;
-    
+
     // SQL Enhancer Engine for query optimization
     private final org.openjproxy.grpc.server.sql.SqlEnhancerEngine sqlEnhancerEngine;
-    
+
     // Multinode XA coordinator for distributing transaction limits
     private static final MultinodeXaCoordinator xaCoordinator = new MultinodeXaCoordinator();
-    
+
     // Cluster health tracker for monitoring health changes
     private final ClusterHealthTracker clusterHealthTracker = new ClusterHealthTracker();
-    
+
     // Unpooled connection details map (for passthrough mode when pooling is disabled)
     private final Map<String, UnpooledConnectionDetails> unpooledConnectionDetailsMap = new ConcurrentHashMap<>();
-    
+
     private static final List<String> INPUT_STREAM_TYPES = Arrays.asList("RAW", "BINARY VARYING", "BYTEA");
     private final Map<String, DbName> dbNameMap = new ConcurrentHashMap<>();
 
-    private final static String RESULT_SET_METADATA_ATTR_PREFIX = "rsMetadata|";
+    private static final String RESULT_SET_METADATA_ATTR_PREFIX = "rsMetadata|";
 
     // ActionContext for refactored actions
     private final org.openjproxy.grpc.server.action.ActionContext actionContext;
-    
+
     public StatementServiceImpl(SessionManager sessionManager, CircuitBreaker circuitBreaker, ServerConfiguration serverConfiguration) {
         this.sessionManager = sessionManager;
         this.circuitBreaker = circuitBreaker;
         this.serverConfiguration = serverConfiguration;
-        
+
         // Initialize SQL enhancer with full configuration
         this.sqlEnhancerEngine = createSqlEnhancerEngine(serverConfiguration);
-        
+
         initializeXAPoolProvider();
-        
+
         // Initialize ActionContext with all shared state
         this.actionContext = new org.openjproxy.grpc.server.action.ActionContext(
-            datasourceMap,
-            xaDataSourceMap,
-            xaRegistries,
-            unpooledConnectionDetailsMap,
-            dbNameMap,
-            slowQuerySegregationManagers,
-            xaPoolProvider,
-            xaCoordinator,
-            clusterHealthTracker,
-            sessionManager,
-            circuitBreaker,
-            serverConfiguration
+                datasourceMap,
+                xaDataSourceMap,
+                xaRegistries,
+                unpooledConnectionDetailsMap,
+                dbNameMap,
+                slowQuerySegregationManagers,
+                xaPoolProvider,
+                xaCoordinator,
+                clusterHealthTracker,
+                sessionManager,
+                circuitBreaker,
+                serverConfiguration
         );
     }
 
     /**
      * Creates and configures the SQL enhancer engine based on server configuration.
      * Parses mode to determine conversion and optimization settings.
-     * 
+     *
      * @param config Server configuration
      * @return Configured SqlEnhancerEngine instance
      */
     private org.openjproxy.grpc.server.sql.SqlEnhancerEngine createSqlEnhancerEngine(ServerConfiguration config) {
         // Parse mode to determine conversion and optimization settings
-        org.openjproxy.grpc.server.sql.SqlEnhancerMode mode = 
-            org.openjproxy.grpc.server.sql.SqlEnhancerMode.fromString(config.getSqlEnhancerMode());
-        
+        org.openjproxy.grpc.server.sql.SqlEnhancerMode mode =
+                org.openjproxy.grpc.server.sql.SqlEnhancerMode.fromString(config.getSqlEnhancerMode());
+
         // Parse rules if specified, otherwise use defaults
         java.util.List<String> enabledRules = null;
         if (config.getSqlEnhancerRules() != null && !config.getSqlEnhancerRules().trim().isEmpty()) {
-            enabledRules = java.util.Arrays.asList(config.getSqlEnhancerRules().split(","))
-                .stream()
-                .map(String::trim)
-                .filter(s -> !s.isEmpty())
-                .collect(java.util.stream.Collectors.toList());
+            enabledRules = Arrays.stream(config.getSqlEnhancerRules().split(","))
+                    .map(String::trim)
+                    .filter(s -> !s.isEmpty())
+                    .toList();
         }
-        
+
         // Create engine with full configuration including targetDialect
         return new org.openjproxy.grpc.server.sql.SqlEnhancerEngine(
-            config.isSqlEnhancerEnabled(),
-            config.getSqlEnhancerDialect(),
-            config.getSqlEnhancerTargetDialect(),
-            mode.isConversionEnabled(),
-            mode.isOptimizationEnabled(),
-            enabledRules
+                config.isSqlEnhancerEnabled(),
+                config.getSqlEnhancerDialect(),
+                config.getSqlEnhancerTargetDialect(),
+                mode.isConversionEnabled(),
+                mode.isOptimizationEnabled(),
+                enabledRules
         );
     }
 
@@ -201,29 +195,29 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
     private void initializeXAPoolProvider() {
         // XA pooling is always enabled
         // Select the provider with the HIGHEST priority (100 = highest, 0 = lowest)
-        
+
         try {
             ServiceLoader<XAConnectionPoolProvider> loader = ServiceLoader.load(XAConnectionPoolProvider.class);
             XAConnectionPoolProvider selectedProvider = null;
             int highestPriority = Integer.MIN_VALUE;
-            
+
             for (XAConnectionPoolProvider provider : loader) {
                 if (provider.isAvailable()) {
-                    log.debug("Found available XA Pool Provider: {} (priority: {})", 
+                    log.debug("Found available XA Pool Provider: {} (priority: {})",
                             provider.getClass().getName(), provider.getPriority());
-                    
+
                     if (provider.getPriority() > highestPriority) {
                         selectedProvider = provider;
                         highestPriority = provider.getPriority();
                     }
                 }
             }
-            
+
             if (selectedProvider != null) {
                 this.xaPoolProvider = selectedProvider;
-                log.info("Selected XA Pool Provider: {} (priority: {})", 
+                log.info("Selected XA Pool Provider: {} (priority: {})",
                         selectedProvider.getClass().getName(), selectedProvider.getPriority());
-                
+
                 // Update ActionContext with initialized provider (if actionContext is already created)
                 if (this.actionContext != null) {
                     this.actionContext.setXaPoolProvider(selectedProvider);
@@ -242,16 +236,15 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
      */
     private String getTargetServer(SessionInfo incomingSessionInfo) {
         // Echo back the targetServer from incoming request, or return empty string if not present
-        if (incomingSessionInfo != null && 
-            incomingSessionInfo.getTargetServer() != null && 
-            !incomingSessionInfo.getTargetServer().isEmpty()) {
+        if (incomingSessionInfo != null &&
+                !incomingSessionInfo.getTargetServer().isEmpty()) {
             return incomingSessionInfo.getTargetServer();
         }
-        
+
         // Return empty string if client didn't send targetServer
         return "";
     }
-    
+
     /**
      * Processes cluster health from the client request and triggers pool rebalancing if needed.
      * This should be called for every request that includes SessionInfo with cluster health.
@@ -261,53 +254,52 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
             log.debug("[XA-REBALANCE-DEBUG] processClusterHealth: sessionInfo is null");
             return;
         }
-        
+
         String clusterHealth = sessionInfo.getClusterHealth();
         String connHash = sessionInfo.getConnHash();
-        
-        log.debug("[XA-REBALANCE] processClusterHealth called: connHash={}, clusterHealth='{}', isXA={}, hasXARegistry={}", 
+
+        log.debug("[XA-REBALANCE] processClusterHealth called: connHash={}, clusterHealth='{}', isXA={}, hasXARegistry={}",
                 connHash, clusterHealth, sessionInfo.getIsXA(), xaRegistries.containsKey(connHash));
-        
-        if (clusterHealth != null && !clusterHealth.isEmpty() && 
-            connHash != null && !connHash.isEmpty()) {
-            
+
+        if (!clusterHealth.isEmpty() && !connHash.isEmpty()) {
+
             // Check if cluster health has changed
             boolean healthChanged = clusterHealthTracker.hasHealthChanged(connHash, clusterHealth);
-            
-            log.debug("[XA-REBALANCE] Cluster health check for {}: changed={}, current health='{}', isXA={}", 
+
+            log.debug("[XA-REBALANCE] Cluster health check for {}: changed={}, current health='{}', isXA={}",
                     connHash, healthChanged, clusterHealth, sessionInfo.getIsXA());
-            
+
             if (healthChanged) {
                 int healthyServerCount = clusterHealthTracker.countHealthyServers(clusterHealth);
-                log.info("[XA-REBALANCE] Cluster health changed for {}, healthy servers: {}, triggering pool rebalancing, isXA={}", 
+                log.info("[XA-REBALANCE] Cluster health changed for {}, healthy servers: {}, triggering pool rebalancing, isXA={}",
                         connHash, healthyServerCount, sessionInfo.getIsXA());
-                
+
                 // Update the pool coordinator with new healthy server count
                 ConnectionPoolConfigurer.getPoolCoordinator().updateHealthyServers(connHash, healthyServerCount);
-                
+
                 // Apply pool size changes to non-XA HikariDataSource if present
                 DataSource ds = datasourceMap.get(connHash);
-                if (ds instanceof HikariDataSource) {
+                if (ds instanceof HikariDataSource hikariDataSource) {
                     log.info("[XA-REBALANCE-DEBUG] Applying size changes to HikariDataSource for {}", connHash);
-                    ConnectionPoolConfigurer.applyPoolSizeChanges(connHash, (HikariDataSource) ds);
+                    ConnectionPoolConfigurer.applyPoolSizeChanges(connHash, hikariDataSource);
                 } else {
                     log.info("[XA-REBALANCE-DEBUG] No HikariDataSource found for {}", connHash);
                 }
-                
+
                 // Apply pool size changes to XA registry if present
                 XATransactionRegistry xaRegistry = xaRegistries.get(connHash);
                 if (xaRegistry != null) {
                     log.info("[XA-REBALANCE-DEBUG] Found XA registry for {}, resizing", connHash);
-                    MultinodePoolCoordinator.PoolAllocation allocation = 
+                    MultinodePoolCoordinator.PoolAllocation allocation =
                             ConnectionPoolConfigurer.getPoolCoordinator().getPoolAllocation(connHash);
-                    
+
                     if (allocation != null) {
                         int newMaxPoolSize = allocation.getCurrentMaxPoolSize();
                         int newMinIdle = allocation.getCurrentMinIdle();
-                        
-                        log.info("[XA-REBALANCE-DEBUG] Resizing XA backend pool for {}: maxPoolSize={}, minIdle={}", 
+
+                        log.info("[XA-REBALANCE-DEBUG] Resizing XA backend pool for {}: maxPoolSize={}, minIdle={}",
                                 connHash, newMaxPoolSize, newMinIdle);
-                        
+
                         xaRegistry.resizeBackendPool(newMaxPoolSize, newMinIdle);
                     } else {
                         log.warn("[XA-REBALANCE-DEBUG] No pool allocation found for {}", connHash);
@@ -320,462 +312,18 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
                 log.debug("[XA-REBALANCE-DEBUG] Cluster health unchanged for {}", connHash);
             }
         } else {
-            log.info("[XA-REBALANCE-DEBUG] Skipping cluster health processing: clusterHealth={}, connHash={}", 
-                    clusterHealth != null && !clusterHealth.isEmpty() ? "present" : "empty", 
-                    connHash != null && !connHash.isEmpty() ? "present" : "empty");
+            log.info("[XA-REBALANCE-DEBUG] Skipping cluster health processing: clusterHealth={}, connHash={}",
+                    clusterHealth.isEmpty() ? "empty" : "present",
+                    connHash.isEmpty() ? "empty" : "present");
         }
     }
 
     @Override
     public void connect(ConnectionDetails connectionDetails, StreamObserver<SessionInfo> responseObserver) {
         org.openjproxy.grpc.server.action.connection.ConnectAction.getInstance()
-            .execute(actionContext, connectionDetails, responseObserver);
+                .execute(actionContext, connectionDetails, responseObserver);
     }
-    
-    /**
-     * Handle XA connection using XA Pool Provider SPI (NEW PATH - enabled by default).
-     * Creates pooled XA DataSource and allocates a XABackendSession immediately for the client.
-     * <p>
-     * Note: We allocate eagerly (not deferred) because XA applications expect getConnection()
-     * to work immediately after creating an XAConnection, before xaStart() is called.
-     * </p>
-     */
-    private void handleXAConnectionWithPooling(ConnectionDetails connectionDetails, String connHash,
-                                               int actualMaxXaTransactions, long xaStartTimeoutMillis,
-                                               StreamObserver<SessionInfo> responseObserver) {
-        log.info("Using XA Pool Provider SPI for connHash: {}", connHash);
-        
-        // Get current serverEndpoints configuration
-        List<String> currentServerEndpoints = connectionDetails.getServerEndpointsList();
-        String currentEndpointsHash = (currentServerEndpoints == null || currentServerEndpoints.isEmpty()) 
-                ? "NONE" 
-                : String.join(",", currentServerEndpoints);
-        
-        // Check if we already have an XA registry for this connection hash
-        XATransactionRegistry registry = xaRegistries.get(connHash);
-        log.info("XA registry cache lookup for {}: exists={}, current serverEndpoints hash: {}", 
-                connHash, registry != null, currentEndpointsHash);
-        
-        // Calculate what the pool sizes SHOULD be based on current configuration
-        int expectedMaxPoolSize;
-        int expectedMinIdle;
-        boolean poolEnabled;
-        try {
-            Properties clientProperties = ConnectionPoolConfigurer.extractClientProperties(connectionDetails);
-            DataSourceConfigurationManager.XADataSourceConfiguration xaConfig = 
-                    DataSourceConfigurationManager.getXAConfiguration(clientProperties);
-            expectedMaxPoolSize = xaConfig.getMaximumPoolSize();
-            expectedMinIdle = xaConfig.getMinimumIdle();
-            poolEnabled = xaConfig.isPoolEnabled();
-            
-            // Apply multinode coordination to get expected divided sizes
-            if (currentServerEndpoints != null && !currentServerEndpoints.isEmpty()) {
-                MultinodePoolCoordinator.PoolAllocation allocation = 
-                        ConnectionPoolConfigurer.getPoolCoordinator().calculatePoolSizes(
-                                connHash, expectedMaxPoolSize, expectedMinIdle, currentServerEndpoints);
-                expectedMaxPoolSize = allocation.getCurrentMaxPoolSize();
-                expectedMinIdle = allocation.getCurrentMinIdle();
-            }
-        } catch (Exception e) {
-            log.warn("Failed to calculate expected pool sizes, will skip validation: {}", e.getMessage());
-            expectedMaxPoolSize = -1;
-            expectedMinIdle = -1;
-            poolEnabled = true; // Default to pooled mode if config fails
-        }
-        
-        // Check if registry exists and needs recreation due to configuration mismatch
-        boolean needsRecreation = false;
-        if (registry != null) {
-            String registryEndpointsHash = registry.getServerEndpointsHash();
-            int registryMaxPool = registry.getMaxPoolSize();
-            int registryMinIdle = registry.getMinIdle();
-            
-            // Check if serverEndpoints changed
-            if (registryEndpointsHash == null || !registryEndpointsHash.equals(currentEndpointsHash)) {
-                log.warn("XA registry for {} has serverEndpoints mismatch: registry='{}' vs current='{}'. Will recreate.", 
-                        connHash, registryEndpointsHash, currentEndpointsHash);
-                needsRecreation = true;
-            }
-            // Check if pool sizes don't match expected values (indicates wrong coordination on first creation)
-            else if (expectedMaxPoolSize > 0 && registryMaxPool != expectedMaxPoolSize) {
-                log.warn("XA registry for {} has maxPoolSize mismatch: registry={} vs expected={}. Will recreate with correct multinode coordination.",
-                        connHash, registryMaxPool, expectedMaxPoolSize);
-                needsRecreation = true;
-            }
-            else if (expectedMinIdle > 0 && registryMinIdle != expectedMinIdle) {
-                log.warn("XA registry for {} has minIdle mismatch: registry={} vs expected={}. Will recreate with correct multinode coordination.",
-                        connHash, registryMinIdle, expectedMinIdle);
-                needsRecreation = true;
-            }
-            
-            if (needsRecreation) {
-                // Close and remove old registry
-                try {
-                    registry.close();
-                } catch (Exception e) {
-                    log.warn("Failed to close old XA registry during recreation: {}", e.getMessage());
-                }
-                xaRegistries.remove(connHash);
-                registry = null;
-            }
-        }
-        
-        if (registry == null) {
-            log.info("Creating NEW XA registry for connHash: {} with serverEndpoints: {}", connHash, currentEndpointsHash);
-            
-            // Check if XA pooling is enabled
-            if (!poolEnabled) {
-                log.info("XA unpooled mode enabled for connHash: {}", connHash);
-                
-                // Handle unpooled XA connection
-                handleUnpooledXAConnection(connectionDetails, connHash, responseObserver);
-                return;
-            }
-            
-            try {
-                // Parse URL to remove OJP-specific prefix (same as non-XA path)
-                String parsedUrl = UrlParser.parseUrl(connectionDetails.getUrl());
-                
-                // Get XA datasource configuration from client properties (uses XA-specific properties)
-                Properties clientProperties = ConnectionPoolConfigurer.extractClientProperties(connectionDetails);
-                DataSourceConfigurationManager.XADataSourceConfiguration xaConfig = 
-                        DataSourceConfigurationManager.getXAConfiguration(clientProperties);
-                
-                // Get default pool sizes from XA configuration
-                int maxPoolSize = xaConfig.getMaximumPoolSize();
-                int minIdle = xaConfig.getMinimumIdle();
-                
-                log.info("XA pool BEFORE multinode coordination for {}: requested max={}, min={}", 
-                        connHash, maxPoolSize, minIdle);
-                
-                // Apply multinode pool coordination if server endpoints provided
-                List<String> serverEndpoints = connectionDetails.getServerEndpointsList();
-                log.info("XA serverEndpoints list: null={}, size={}, endpoints={}", 
-                        serverEndpoints == null, 
-                        serverEndpoints == null ? 0 : serverEndpoints.size(),
-                        serverEndpoints);
-                
-                if (serverEndpoints != null && !serverEndpoints.isEmpty()) {
-                    // Multinode: divide pool sizes among servers
-                    MultinodePoolCoordinator.PoolAllocation allocation = 
-                            ConnectionPoolConfigurer.getPoolCoordinator().calculatePoolSizes(
-                                    connHash, maxPoolSize, minIdle, serverEndpoints);
-                    
-                    maxPoolSize = allocation.getCurrentMaxPoolSize();
-                    minIdle = allocation.getCurrentMinIdle();
-                    
-                    log.info("XA multinode pool coordination for {}: {} servers, divided sizes: max={}, min={}", 
-                            connHash, serverEndpoints.size(), maxPoolSize, minIdle);
-                } else {
-                    log.info("XA multinode coordination SKIPPED for {}: serverEndpoints null or empty", connHash);
-                }
-                
-                log.info("XA pool AFTER multinode coordination for {}: final max={}, min={}", 
-                        connHash, maxPoolSize, minIdle);
 
-                
-                // Build configuration map for XA Pool Provider
-                Map<String, String> xaPoolConfig = new HashMap<>();
-                xaPoolConfig.put("xa.datasource.className", getXADataSourceClassName(parsedUrl));
-                xaPoolConfig.put("xa.url", parsedUrl);
-                xaPoolConfig.put("xa.username", connectionDetails.getUser());
-                xaPoolConfig.put("xa.password", connectionDetails.getPassword());
-                // Use calculated pool sizes (with multinode coordination if applicable)
-                xaPoolConfig.put("xa.maxPoolSize", String.valueOf(maxPoolSize));
-                xaPoolConfig.put("xa.minIdle", String.valueOf(minIdle));
-                xaPoolConfig.put("xa.connectionTimeoutMs", String.valueOf(xaConfig.getConnectionTimeout()));
-                xaPoolConfig.put("xa.idleTimeoutMs", String.valueOf(xaConfig.getIdleTimeout()));
-                xaPoolConfig.put("xa.maxLifetimeMs", String.valueOf(xaConfig.getMaxLifetime()));
-                // Evictor configuration
-                xaPoolConfig.put("xa.timeBetweenEvictionRunsMs", String.valueOf(xaConfig.getTimeBetweenEvictionRuns()));
-                xaPoolConfig.put("xa.numTestsPerEvictionRun", String.valueOf(xaConfig.getNumTestsPerEvictionRun()));
-                xaPoolConfig.put("xa.softMinEvictableIdleTimeMs", String.valueOf(xaConfig.getSoftMinEvictableIdleTime()));
-                
-                // Transaction isolation configuration - use configured or default to READ_COMMITTED
-                Integer configuredTransactionIsolation = xaConfig.getDefaultTransactionIsolation();
-                Integer defaultTransactionIsolation = configuredTransactionIsolation != null 
-                        ? configuredTransactionIsolation 
-                        : java.sql.Connection.TRANSACTION_READ_COMMITTED;
-                
-                xaPoolConfig.put("xa.defaultTransactionIsolation", String.valueOf(defaultTransactionIsolation));
-                if (configuredTransactionIsolation == null) {
-                    log.info("No transaction isolation configured for XA pool {}, using default READ_COMMITTED", connHash);
-                } else {
-                    log.info("Using configured transaction isolation for XA pool {}: {}", connHash, configuredTransactionIsolation);
-                }
-                
-                // Create pooled XA DataSource via provider
-                log.info("[XA-POOL-CREATE] Creating XA pool for connHash={}, serverEndpointsHash={}, config=(max={}, min={})",
-                        connHash, currentEndpointsHash, maxPoolSize, minIdle);
-                Object pooledXADataSource = xaPoolProvider.createXADataSource(xaPoolConfig);
-                
-                // Create XA Transaction Registry with serverEndpoints hash and pool sizes for validation
-                registry = new XATransactionRegistry(xaPoolProvider, pooledXADataSource, currentEndpointsHash, maxPoolSize, minIdle);
-                xaRegistries.put(connHash, registry);
-                
-                // Initialize pool with minIdle connections immediately after creation
-                // Without this, the pool starts empty and only creates connections on demand
-                log.info("[XA-POOL-INIT] Initializing XA pool with minIdle={} connections for connHash={}", minIdle, connHash);
-                registry.resizeBackendPool(maxPoolSize, minIdle);
-                
-                // Create slow query segregation manager for XA
-                createSlowQuerySegregationManagerForDatasource(connHash, actualMaxXaTransactions, true, xaStartTimeoutMillis);
-                
-                log.info("[XA-POOL-CREATE] Successfully created XA pool for connHash={} - maxPoolSize={}, minIdle={}, multinode={}, poolObject={}", 
-                        connHash, maxPoolSize, minIdle, serverEndpoints != null && !serverEndpoints.isEmpty(), 
-                        pooledXADataSource.getClass().getSimpleName());
-                
-            } catch (Exception e) {
-                log.error("[XA-POOL-CREATE] FAILED to create XA Pool Provider registry for connHash={}, serverEndpointsHash={}: {}", 
-                        connHash, currentEndpointsHash, e.getMessage(), e);
-                SQLException sqlException = new SQLException("Failed to create XA pool: " + e.getMessage(), e);
-                sendSQLExceptionMetadata(sqlException, responseObserver);
-                return;
-            }
-        } else {
-            log.info("[XA-POOL-REUSE] Reusing EXISTING XA registry for connHash={} (pool already created, cached sizes: max={}, min={})",
-                    connHash, registry.getMaxPoolSize(), registry.getMinIdle());
-        }
-        
-        this.sessionManager.registerClientUUID(connHash, connectionDetails.getClientUUID());
-        
-        // CRITICAL FIX: Call processClusterHealth() BEFORE borrowing session
-        // This ensures pool rebalancing happens even when server 1 fails before any XA operations execute
-        // Without this, pool exhaustion prevents cluster health propagation and pool never expands
-        if (connectionDetails.getClusterHealth() != null && !connectionDetails.getClusterHealth().isEmpty()) {
-            // Use the ACTUAL cluster health from the client (not synthetic)
-            // The client sends the current health status of all servers
-            String actualClusterHealth = connectionDetails.getClusterHealth();
-            
-            // Create a temporary SessionInfo with cluster health for processing
-            // We don't have the actual sessionInfo yet since we haven't borrowed from the pool
-            SessionInfo tempSessionInfo = SessionInfo.newBuilder()
-                    .setSessionUUID("temp-for-health-check")
-                    .setConnHash(connHash)
-                    .setClusterHealth(actualClusterHealth)
-                    .build();
-            
-            log.info("[XA-CONNECT-REBALANCE] Calling processClusterHealth BEFORE borrow for connHash={}, clusterHealth={}", 
-                    connHash, actualClusterHealth);
-            
-            // Process cluster health to trigger pool rebalancing if needed
-            processClusterHealth(tempSessionInfo);
-        } else {
-            log.warn("[XA-CONNECT-REBALANCE] No cluster health provided in ConnectionDetails for connHash={}, pool rebalancing may be delayed", 
-                    connHash);
-        }
-        
-        // Borrow a XABackendSession from the pool for immediate use
-        // Note: Unlike the original "deferred" approach, we allocate eagerly because
-        // XA applications expect getConnection() to work immediately, before xaStart()
-        org.openjproxy.xa.pool.XABackendSession backendSession = null;
-        try {
-            backendSession = 
-                    (org.openjproxy.xa.pool.XABackendSession) xaPoolProvider.borrowSession(registry.getPooledXADataSource());
-            
-            XAConnection xaConnection = backendSession.getXAConnection();
-            Connection connection = backendSession.getConnection();
-            
-            // Create XA session with the pooled XAConnection
-            SessionInfo sessionInfo = this.sessionManager.createXASession(
-                    connectionDetails.getClientUUID(), connection, xaConnection);
-            
-            // Store the XABackendSession reference in the session for later lifecycle management
-            Session session = this.sessionManager.getSession(sessionInfo);
-            if (session != null) {
-                session.setBackendSession(backendSession);
-            }
-            
-            log.info("Created XA session (pooled, eager allocation) with client UUID: {} for connHash: {}", 
-                    connectionDetails.getClientUUID(), connHash);
-            
-            // Note: processClusterHealth() already called BEFORE borrowing session (see above)
-            // This ensures pool is resized before we try to borrow, preventing exhaustion
-            
-            responseObserver.onNext(sessionInfo);
-            this.dbNameMap.put(connHash, DatabaseUtils.resolveDbName(connectionDetails.getUrl()));
-            responseObserver.onCompleted();
-            
-        } catch (Exception e) {
-            log.error("Failed to borrow XABackendSession from pool for connection hash {}: {}", 
-                    connHash, e.getMessage(), e);
-            
-            // CRITICAL FIX: Return the borrowed session back to pool on failure to prevent session leaks
-            // This was causing PostgreSQL "too many clients" errors as leaked sessions bypassed pool limits
-            if (backendSession != null) {
-                try {
-                    xaPoolProvider.returnSession(registry.getPooledXADataSource(), backendSession);
-                    log.debug("Returned leaked session to pool after connect() failure for connHash: {}", connHash);
-                } catch (Exception e2) {
-                    log.error("Failed to return session after connect() failure for connHash: {}", connHash, e2);
-                    // Try to invalidate instead to prevent corrupted session reuse
-                    try {
-                        xaPoolProvider.invalidateSession(registry.getPooledXADataSource(), backendSession);
-                        log.warn("Invalidated session after failed return for connHash: {}", connHash);
-                    } catch (Exception e3) {
-                        log.error("Failed to invalidate session after connect() failure for connHash: {}", connHash, e3);
-                    }
-                }
-            }
-            
-            SQLException sqlException = new SQLException("Failed to allocate XA session from pool: " + e.getMessage(), e);
-            sendSQLExceptionMetadata(sqlException, responseObserver);
-            return;
-        }
-    }
-    
-    /**
-     * Handle unpooled XA connection by creating a direct XADataSource without pooling.
-     * This mode creates XAConnections on demand without any connection pooling.
-     * Used when ojp.xa.connection.pool.enabled=false.
-     */
-    private void handleUnpooledXAConnection(ConnectionDetails connectionDetails, String connHash,
-                                            StreamObserver<SessionInfo> responseObserver) {
-        try {
-            // Parse URL to remove OJP-specific prefix
-            String parsedUrl = UrlParser.parseUrl(connectionDetails.getUrl());
-            
-            // Get XA datasource configuration from client properties
-            Properties clientProperties = ConnectionPoolConfigurer.extractClientProperties(connectionDetails);
-            DataSourceConfigurationManager.XADataSourceConfiguration xaConfig = 
-                    DataSourceConfigurationManager.getXAConfiguration(clientProperties);
-            
-            // Create XADataSource directly using XADataSourceFactory
-            XADataSource xaDataSource = XADataSourceFactory.createXADataSource(
-                    parsedUrl, 
-                    connectionDetails);
-            
-            // Store the unpooled XADataSource for this connection
-            xaDataSourceMap.put(connHash, xaDataSource);
-            
-            log.info("Created unpooled XADataSource for connHash: {}, database: {}", 
-                    connHash, DatabaseUtils.resolveDbName(connectionDetails.getUrl()));
-            
-            // Register client UUID
-            this.sessionManager.registerClientUUID(connHash, connectionDetails.getClientUUID());
-            
-            // Return session info (XAConnection will be created on demand when needed)
-            SessionInfo sessionInfo = SessionInfo.newBuilder()
-                    .setConnHash(connHash)
-                    .setClientUUID(connectionDetails.getClientUUID())
-                    .setIsXA(true)
-                    .build();
-            
-            responseObserver.onNext(sessionInfo);
-            this.dbNameMap.put(connHash, DatabaseUtils.resolveDbName(connectionDetails.getUrl()));
-            responseObserver.onCompleted();
-            
-        } catch (Exception e) {
-            log.error("Failed to create unpooled XADataSource for connection hash {}: {}", 
-                    connHash, e.getMessage(), e);
-            SQLException sqlException = new SQLException("Failed to create unpooled XADataSource: " + e.getMessage(), e);
-            sendSQLExceptionMetadata(sqlException, responseObserver);
-        }
-    }
-    
-    /**
-     * Handle XA connection using pass-through approach (OLD PATH - disabled by default, kept for rollback).
-     * Creates native XADataSource and eager XAConnection allocation.
-     */
-    
-    /**
-     * Determine XADataSource class name based on database URL.
-     */
-    private String getXADataSourceClassName(String url) {
-        String lowerUrl = url.toLowerCase();
-        if (lowerUrl.contains(":postgresql:")) {
-            return "org.postgresql.xa.PGXADataSource";
-        } else if (lowerUrl.contains(":oracle:")) {
-            return "oracle.jdbc.xa.client.OracleXADataSource";
-        } else if (lowerUrl.contains(":sqlserver:")) {
-            return "com.microsoft.sqlserver.jdbc.SQLServerXADataSource";
-        } else if (lowerUrl.contains(":db2:")) {
-            return "com.ibm.db2.jcc.DB2XADataSource";
-        } else if (lowerUrl.contains(":mysql:") || lowerUrl.contains(":mariadb:")) {
-            return "com.mysql.cj.jdbc.MysqlXADataSource";
-        } else {
-            throw new IllegalArgumentException("Unsupported database for XA: " + url);
-        }
-    }
-    
-    /**
-     * Creates a slow query segregation manager for a specific datasource.
-     * Each datasource gets its own manager with pool size based on actual HikariCP configuration.
-     */
-    private void createSlowQuerySegregationManagerForDatasource(String connHash, int actualPoolSize) {
-        createSlowQuerySegregationManagerForDatasource(connHash, actualPoolSize, false, 0);
-    }
-    
-    /**
-     * Creates a SlowQuerySegregationManager for a datasource with XA-specific handling.
-     * 
-     * @param connHash The connection hash
-     * @param actualPoolSize The actual pool size (max XA transactions for XA, max pool size for non-XA)
-     * @param isXA Whether this is an XA connection
-     * @param xaStartTimeoutMillis The XA start timeout in milliseconds (only used for XA connections)
-     */
-    private void createSlowQuerySegregationManagerForDatasource(String connHash, int actualPoolSize, boolean isXA, long xaStartTimeoutMillis) {
-        boolean slowQueryEnabled = serverConfiguration.isSlowQuerySegregationEnabled();
-        
-        if (isXA) {
-            // XA-specific handling
-            if (slowQueryEnabled) {
-                // XA with slow query segregation enabled: use configured slow/fast slot allocation
-                SlowQuerySegregationManager manager = new SlowQuerySegregationManager(
-                    actualPoolSize,
-                    serverConfiguration.getSlowQuerySlotPercentage(),
-                    serverConfiguration.getSlowQueryIdleTimeout(),
-                    serverConfiguration.getSlowQuerySlowSlotTimeout(),
-                    serverConfiguration.getSlowQueryFastSlotTimeout(),
-                    serverConfiguration.getSlowQueryUpdateGlobalAvgInterval(),
-                    true
-                );
-                slowQuerySegregationManagers.put(connHash, manager);
-                log.info("Created SlowQuerySegregationManager for XA datasource {} with pool size {} (slow query segregation enabled)", 
-                        connHash, actualPoolSize);
-            } else {
-                // XA with slow query segregation disabled: use SlotManager only (no QueryPerformanceMonitor)
-                // Set totalSlots=actualPoolSize, fastSlots=actualPoolSize, slowSlots=0
-                // Use xaStartTimeoutMillis as the fast slot timeout
-                SlowQuerySegregationManager manager = new SlowQuerySegregationManager(
-                    actualPoolSize,
-                    0, // slowSlotPercentage = 0 means all slots are fast
-                    0, // idleTimeout not relevant
-                    0, // slowSlotTimeout not relevant
-                    xaStartTimeoutMillis, // Use XA start timeout for fast slot timeout
-                    0, // updateGlobalAvgInterval = 0 means no performance monitoring
-                    true // enabled = true to use SlotManager
-                );
-                slowQuerySegregationManagers.put(connHash, manager);
-                log.info("Created SlowQuerySegregationManager for XA datasource {} with {} slots (all fast, timeout={}ms, no performance monitoring)", 
-                        connHash, actualPoolSize, xaStartTimeoutMillis);
-            }
-        } else {
-            // Non-XA handling (original logic)
-            if (slowQueryEnabled) {
-                SlowQuerySegregationManager manager = new SlowQuerySegregationManager(
-                    actualPoolSize,
-                    serverConfiguration.getSlowQuerySlotPercentage(),
-                    serverConfiguration.getSlowQueryIdleTimeout(),
-                    serverConfiguration.getSlowQuerySlowSlotTimeout(),
-                    serverConfiguration.getSlowQueryFastSlotTimeout(),
-                    serverConfiguration.getSlowQueryUpdateGlobalAvgInterval(),
-                    true
-                );
-                slowQuerySegregationManagers.put(connHash, manager);
-                log.info("Created SlowQuerySegregationManager for datasource {} with pool size {}", 
-                        connHash, actualPoolSize);
-            } else {
-                // Create disabled manager for consistency
-                SlowQuerySegregationManager manager = new SlowQuerySegregationManager(
-                    1, 0, 0, 0, 0, 0, false
-                );
-                slowQuerySegregationManagers.put(connHash, manager);
-                log.info("Created disabled SlowQuerySegregationManager for datasource {}", connHash);
-            }
-        }
-    }
-    
     /**
      * Gets the slow query segregation manager for a specific connection hash.
      * If no manager exists, creates a disabled one as a fallback.
@@ -796,26 +344,26 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
     public void executeUpdate(StatementRequest request, StreamObserver<OpResult> responseObserver) {
         log.info("Executing update {}", request.getSql());
         String stmtHash = SqlStatementXXHash.hashSqlQuery(request.getSql());
-        
+
         // Process cluster health from the request
         processClusterHealth(request.getSession());
-        
+
         try {
             circuitBreaker.preCheck(stmtHash);
-            
+
             // Get the appropriate slow query segregation manager for this datasource
             String connHash = request.getSession().getConnHash();
             SlowQuerySegregationManager manager = getSlowQuerySegregationManagerForConnection(connHash);
-            
+
             // Execute with slow query segregation
-            OpResult result = manager.executeWithSegregation(stmtHash, () -> {
-                return executeUpdateInternal(request);
-            });
-            
+            OpResult result = manager.executeWithSegregation(stmtHash, () ->
+                    executeUpdateInternal(request)
+            );
+
             responseObserver.onNext(result);
             responseObserver.onCompleted();
             circuitBreaker.onSuccess(stmtHash);
-            
+
         } catch (SQLDataException e) {
             circuitBreaker.onFailure(stmtHash, e);
             log.error("SQL data failure during update execution: " + e.getMessage(), e);
@@ -826,9 +374,9 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
             sendSQLExceptionMetadata(e, responseObserver);
         } catch (Exception e) {
             log.error("Unexpected failure during update execution: " + e.getMessage(), e);
-            if (e.getCause() instanceof SQLException) {
-                circuitBreaker.onFailure(stmtHash, (SQLException) e.getCause());
-                sendSQLExceptionMetadata((SQLException) e.getCause(), responseObserver);
+            if (e.getCause() instanceof SQLException cause) {
+                circuitBreaker.onFailure(stmtHash, cause);
+                sendSQLExceptionMetadata(cause, responseObserver);
             } else {
                 SQLException sqlException = new SQLException("Unexpected error: " + e.getMessage(), e);
                 circuitBreaker.onFailure(stmtHash, sqlException);
@@ -836,13 +384,13 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
             }
         }
     }
-    
+
     /**
      * Internal method for executing updates without segregation logic.
      */
     private OpResult executeUpdateInternal(StatementRequest request) throws SQLException {
         int updated = 0;
-        SessionInfo returnSessionInfo = request.getSession();
+        SessionInfo returnSessionInfo;
         ConnectionSessionDTO dto = ConnectionSessionDTO.builder().build();
 
         Statement stmt = null;
@@ -908,20 +456,19 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
             }
         } finally {
             //If there is no session, close statement and connection
-            if (dto.getSession() == null || StringUtils.isEmpty(dto.getSession().getSessionUUID())) {
-                if (stmt != null) {
-                    try {
-                        stmt.close();
-                    } catch (SQLException e) {
-                        log.error("Failure closing statement: " + e.getMessage(), e);
-                    }
-                    try {
-                        stmt.getConnection().close();
-                    } catch (SQLException e) {
-                        log.error("Failure closing connection: " + e.getMessage(), e);
-                    }
+            if ((dto.getSession() == null || StringUtils.isEmpty(dto.getSession().getSessionUUID())) && stmt != null) {
+                try {
+                    stmt.close();
+                } catch (SQLException e) {
+                    log.error("Failure closing statement: " + e.getMessage(), e);
+                }
+                try {
+                    stmt.getConnection().close();
+                } catch (SQLException e) {
+                    log.error("Failure closing connection: " + e.getMessage(), e);
                 }
             }
+
         }
     }
 
@@ -929,23 +476,23 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
     public void executeQuery(StatementRequest request, StreamObserver<OpResult> responseObserver) {
         log.info("Executing query for {}", request.getSql());
         String stmtHash = SqlStatementXXHash.hashSqlQuery(request.getSql());
-        
+
         // Process cluster health from the request
         processClusterHealth(request.getSession());
-        
+
         try {
             circuitBreaker.preCheck(stmtHash);
-            
+
             // Get the appropriate slow query segregation manager for this datasource
             String connHash = request.getSession().getConnHash();
             SlowQuerySegregationManager manager = getSlowQuerySegregationManagerForConnection(connHash);
-            
+
             // Execute with slow query segregation
             manager.executeWithSegregation(stmtHash, () -> {
                 executeQueryInternal(request, responseObserver);
                 return null; // Void return for query execution
             });
-            
+
             circuitBreaker.onSuccess(stmtHash);
         } catch (SQLException e) {
             circuitBreaker.onFailure(stmtHash, e);
@@ -953,9 +500,9 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
             sendSQLExceptionMetadata(e, responseObserver);
         } catch (Exception e) {
             log.error("Unexpected failure during query execution: " + e.getMessage(), e);
-            if (e.getCause() instanceof SQLException) {
-                circuitBreaker.onFailure(stmtHash, (SQLException) e.getCause());
-                sendSQLExceptionMetadata((SQLException) e.getCause(), responseObserver);
+            if (e.getCause() instanceof SQLException cause) {
+                circuitBreaker.onFailure(stmtHash, cause);
+                sendSQLExceptionMetadata(cause, responseObserver);
             } else {
                 SQLException sqlException = new SQLException("Unexpected error: " + e.getMessage(), e);
                 circuitBreaker.onFailure(stmtHash, sqlException);
@@ -963,7 +510,7 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
             }
         }
     }
-    
+
     /**
      * Internal method for executing queries without segregation logic.
      */
@@ -973,17 +520,17 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
         // Phase 2: SQL Enhancement with timing
         String sql = request.getSql();
         long enhancementStartTime = System.currentTimeMillis();
-        
+
         if (sqlEnhancerEngine.isEnabled()) {
             org.openjproxy.grpc.server.sql.SqlEnhancementResult result = sqlEnhancerEngine.enhance(sql);
             sql = result.getEnhancedSql();
-            
+
             long enhancementDuration = System.currentTimeMillis() - enhancementStartTime;
-            
+
             if (result.isModified()) {
                 log.debug("SQL was enhanced in {}ms: {} -> {}", enhancementDuration,
-                         request.getSql().substring(0, Math.min(request.getSql().length(), 50)), 
-                         sql.substring(0, Math.min(sql.length(), 50)));
+                        request.getSql().substring(0, Math.min(request.getSql().length(), 50)),
+                        sql.substring(0, Math.min(sql.length(), 50)));
             } else if (enhancementDuration > 10) {
                 log.debug("SQL enhancement took {}ms (no modifications)", enhancementDuration);
             }
@@ -991,8 +538,10 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
 
         List<Parameter> params = ProtoConverter.fromProtoList(request.getParametersList());
         if (CollectionUtils.isNotEmpty(params)) {
-            PreparedStatement ps = StatementFactory.createPreparedStatement(sessionManager, dto, sql, params, request);
-            String resultSetUUID = this.sessionManager.registerResultSet(dto.getSession(), ps.executeQuery());
+            String resultSetUUID;
+            try (PreparedStatement ps = StatementFactory.createPreparedStatement(sessionManager, dto, sql, params, request)) {
+                resultSetUUID = this.sessionManager.registerResultSet(dto.getSession(), ps.executeQuery());
+            }
             this.handleResultSet(dto.getSession(), resultSetUUID, responseObserver);
         } else {
             Statement stmt = StatementFactory.createStatement(sessionManager, dto.getConnection(), request);
@@ -1005,10 +554,10 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
     @Override
     public void fetchNextRows(ResultSetFetchRequest request, StreamObserver<OpResult> responseObserver) {
         log.debug("Executing fetch next rows for result set  {}", request.getResultSetUUID());
-        
+
         // Process cluster health from the request
         processClusterHealth(request.getSession());
-        
+
         try {
             ConnectionSessionDTO dto = this.sessionConnection(request.getSession(), false);
             this.handleResultSet(dto.getSession(), request.getResultSetUUID(), responseObserver);
@@ -1037,12 +586,12 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
 
             @Override
             public void setOnCancelHandler(Runnable runnable) {
-
+                // Implementation not needed
             }
 
             @Override
             public void setCompression(String s) {
-
+                // Implementation not needed
             }
 
             @Override
@@ -1052,22 +601,22 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
 
             @Override
             public void setOnReadyHandler(Runnable runnable) {
-
+                // Implementation not needed
             }
 
             @Override
             public void request(int i) {
-
+                // Implementation not needed
             }
 
             @Override
             public void setMessageCompression(boolean b) {
-
+                // Implementation not needed
             }
 
             @Override
             public void disableAutoInboundFlowControl() {
-
+                // Implementation not needed
             }
 
             @Override
@@ -1094,8 +643,8 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
                         case LT_BLOB: {
                             Blob blob = sessionManager.getLob(dto.getSession(), this.lobUUID);
                             if (blob == null) {
-                                throw new SQLException("Unable to write LOB of type " + this.lobType + ": Blob object is null for UUID " + this.lobUUID + 
-                                    ". This may indicate a race condition or session management issue.");
+                                throw new SQLException("Unable to write LOB of type " + this.lobType + ": Blob object is null for UUID " + this.lobUUID +
+                                        ". This may indicate a race condition or session management issue.");
                             }
                             byte[] byteArrayData = lobDataBlock.getData().toByteArray();
                             bytesWritten = blob.setBytes(lobDataBlock.getPosition(), byteArrayData);
@@ -1104,12 +653,13 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
                         case LT_CLOB: {
                             Clob clob = sessionManager.getLob(dto.getSession(), this.lobUUID);
                             if (clob == null) {
-                                throw new SQLException("Unable to write LOB of type " + this.lobType + ": Clob object is null for UUID " + this.lobUUID + 
-                                    ". This may indicate a race condition or session management issue.");
+                                throw new SQLException("Unable to write LOB of type " + this.lobType + ": Clob object is null for UUID " + this.lobUUID +
+                                        ". This may indicate a race condition or session management issue.");
                             }
                             byte[] byteArrayData = lobDataBlock.getData().toByteArray();
-                            Writer writer = clob.setCharacterStream(lobDataBlock.getPosition());
-                            writer.write(new String(byteArrayData, StandardCharsets.UTF_8).toCharArray());
+                            try (Writer writer = clob.setCharacterStream(lobDataBlock.getPosition())) {
+                                writer.write(new String(byteArrayData, StandardCharsets.UTF_8).toCharArray());
+                            }
                             bytesWritten = byteArrayData.length;
                             break;
                         }
@@ -1119,7 +669,7 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
                                     throw new SQLException("Metadata empty for binary stream type.");
                                 }
                                 Map<String, Object> metadataStringKey = ProtoConverter.propertiesFromProto(lobDataBlock.getMetadataList());
-                                
+
                                 // Convert string keys back to integer keys for backward compatibility
                                 Map<Integer, Object> metadata = new java.util.HashMap<>();
                                 for (Map.Entry<String, Object> entry : metadataStringKey.entrySet()) {
@@ -1130,7 +680,7 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
                                         metadata.put(entry.getKey().hashCode(), entry.getValue());
                                     }
                                 }
-                                
+
                                 String sql = (String) metadata.get(CommonConstants.PREPARED_STATEMENT_BINARY_STREAM_SQL);
                                 PreparedStatement ps;
                                 String preparedStatementUUID = (String) metadata.get(CommonConstants.PREPARED_STATEMENT_UUID_BINARY_STREAM);
@@ -1221,8 +771,8 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
 
     @Override
     public void readLob(ReadLobRequest request, StreamObserver<LobDataBlock> responseObserver) {
-        new org.openjproxy.grpc.server.action.streaming.ReadLobAction(sessionManager)
-                .execute(request, responseObserver);
+        org.openjproxy.grpc.server.action.streaming.ReadLobAction.getInstance()
+                .execute(actionContext, request, responseObserver);
     }
 
     @Builder
@@ -1239,11 +789,11 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
     public void terminateSession(SessionInfo sessionInfo, StreamObserver<SessionTerminationStatus> responseObserver) {
         try {
             log.info("Terminating session");
-            
+
             // Before terminating, return any completed XA backend sessions to pool
             // This implements the dual-condition lifecycle: sessions are returned when
             // both transaction is complete AND XAConnection is closed
-            log.info("[XA-TERMINATE] terminateSession called for sessionUUID={}, isXA={}, connHash={}", 
+            log.info("[XA-TERMINATE] terminateSession called for sessionUUID={}, isXA={}, connHash={}",
                     sessionInfo.getSessionUUID(), sessionInfo.getIsXA(), sessionInfo.getConnHash());
             if (sessionInfo.getIsXA()) {
                 String connHash = sessionInfo.getConnHash();
@@ -1260,7 +810,7 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
                     log.warn("[XA-TERMINATE] No XA registry found for connHash={}", connHash);
                 }
             }
-            
+
             log.info("[XA-TERMINATE] Calling sessionManager.terminateSession for sessionUUID={}", sessionInfo.getSessionUUID());
             this.sessionManager.terminateSession(sessionInfo);
             responseObserver.onNext(SessionTerminationStatus.newBuilder().setTerminated(true).build());
@@ -1275,10 +825,10 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
     @Override
     public void startTransaction(SessionInfo sessionInfo, StreamObserver<SessionInfo> responseObserver) {
         log.info("Starting transaction");
-        
+
         // Process cluster health from the request
         processClusterHealth(sessionInfo);
-        
+
         try {
             SessionInfo activeSessionInfo = sessionInfo;
 
@@ -1314,10 +864,10 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
     @Override
     public void commitTransaction(SessionInfo sessionInfo, StreamObserver<SessionInfo> responseObserver) {
         log.info("Commiting transaction");
-        
+
         // Process cluster health from the request
         processClusterHealth(sessionInfo);
-        
+
         try {
             Connection conn = sessionManager.getConnection(sessionInfo);
             conn.commit();
@@ -1343,10 +893,10 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
     @Override
     public void rollbackTransaction(SessionInfo sessionInfo, StreamObserver<SessionInfo> responseObserver) {
         log.info("Rollback transaction");
-        
+
         // Process cluster health from the request
         processClusterHealth(sessionInfo);
-        
+
         try {
             Connection conn = sessionManager.getConnection(sessionInfo);
             conn.rollback();
@@ -1373,7 +923,7 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
     public void callResource(CallResourceRequest request, StreamObserver<CallResourceResponse> responseObserver) {
         // Process cluster health from the request
         processClusterHealth(request.getSession());
-        
+
         try {
             if (!request.hasSession()) {
                 throw new SQLException("No active session.");
@@ -1396,7 +946,7 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
                 case RES_STATEMENT: {
                     ConnectionSessionDTO csDto = sessionConnection(request.getSession(), true);
                     responseBuilder.setSession(csDto.getSession());
-                    Statement statement = null;
+                    Statement statement;
                     if (!request.getResourceUUID().isBlank()) {
                         statement = sessionManager.getStatement(csDto.getSession(), request.getResourceUUID());
                     } else {
@@ -1410,7 +960,7 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
                 case RES_PREPARED_STATEMENT: {
                     ConnectionSessionDTO csDto = sessionConnection(request.getSession(), true);
                     responseBuilder.setSession(csDto.getSession());
-                    PreparedStatement ps = null;
+                    PreparedStatement ps;
                     if (!request.getResourceUUID().isBlank()) {
                         ps = sessionManager.getPreparedStatement(request.getSession(), request.getResourceUUID());
                     } else {
@@ -1448,7 +998,7 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
             List<Object> paramsReceived = (request.getTarget().getParamsCount() > 0) ?
                     ProtoConverter.parameterValuesToObjectList(request.getTarget().getParamsList()) : EMPTY_LIST;
             Class<?> clazz = resource.getClass();
-            if ((paramsReceived != null && paramsReceived.size() > 0) &&
+            if (!paramsReceived.isEmpty() &&
                     ((CallType.CALL_RELEASE.equals(request.getTarget().getCallType()) &&
                             "Savepoint".equalsIgnoreCase(request.getTarget().getResourceName())) ||
                             (CallType.CALL_ROLLBACK.equals(request.getTarget().getCallType()))
@@ -1461,27 +1011,23 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
             Method method = MethodReflectionUtils.findMethodByName(JavaSqlInterfacesConverter.interfaceClass(clazz),
                     MethodNameGenerator.methodName(request.getTarget()), paramsReceived);
             java.lang.reflect.Parameter[] params = method.getParameters();
-            Object resultFirstLevel = null;
+            Object resultFirstLevel;
             if (params != null && params.length > 0) {
                 resultFirstLevel = method.invoke(resource, paramsReceived.toArray());
-                if (resultFirstLevel instanceof CallableStatement) {
-                    CallableStatement cs = (CallableStatement) resultFirstLevel;
+                if (resultFirstLevel instanceof CallableStatement cs) {
                     resultFirstLevel = this.sessionManager.registerCallableStatement(responseBuilder.getSession(), cs);
                 }
             } else {
                 resultFirstLevel = method.invoke(resource);
-                if (resultFirstLevel instanceof ResultSet) {
-                    ResultSet rs = (ResultSet) resultFirstLevel;
+                if (resultFirstLevel instanceof ResultSet rs) {
                     resultFirstLevel = this.sessionManager.registerResultSet(responseBuilder.getSession(), rs);
-                } else if (resultFirstLevel instanceof Array) {
-                    Array array = (Array) resultFirstLevel;
+                } else if (resultFirstLevel instanceof Array array) {
                     String arrayUUID = UUID.randomUUID().toString();
                     this.sessionManager.registerAttr(responseBuilder.getSession(), arrayUUID, array);
                     resultFirstLevel = arrayUUID;
                 }
             }
-            if (resultFirstLevel instanceof Savepoint) {
-                Savepoint sp = (Savepoint) resultFirstLevel;
+            if (resultFirstLevel instanceof Savepoint sp) {
                 String uuid = UUID.randomUUID().toString();
                 resultFirstLevel = uuid;
                 this.sessionManager.registerAttr(responseBuilder.getSession(), uuid, sp);
@@ -1496,14 +1042,13 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
                         MethodNameGenerator.methodName(request.getTarget().getNextCall()),
                         paramsReceived2);
                 params = methodNext.getParameters();
-                Object resultSecondLevel = null;
+                Object resultSecondLevel;
                 if (params != null && params.length > 0) {
                     resultSecondLevel = methodNext.invoke(resultFirstLevel, paramsReceived2.toArray());
                 } else {
                     resultSecondLevel = methodNext.invoke(resultFirstLevel);
                 }
-                if (resultSecondLevel instanceof ResultSet) {
-                    ResultSet rs = (ResultSet) resultSecondLevel;
+                if (resultSecondLevel instanceof ResultSet rs) {
                     resultSecondLevel = this.sessionManager.registerResultSet(responseBuilder.getSession(), rs);
                 }
                 responseBuilder.addValues(ProtoConverter.toParameterValue(resultSecondLevel));
@@ -1516,8 +1061,7 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
         } catch (SQLException se) {
             sendSQLExceptionMetadata(se, responseObserver);
         } catch (InvocationTargetException e) {
-            if (e.getTargetException() instanceof SQLException) {
-                SQLException sqlException = (SQLException) e.getTargetException();
+            if (e.getTargetException() instanceof SQLException sqlException) {
                 sendSQLExceptionMetadata(sqlException, responseObserver);
             } else {
                 sendSQLExceptionMetadata(new SQLException("Unable to call resource: " + e.getTargetException().getMessage()),
@@ -1576,7 +1120,7 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
         ConnectionSessionDTO.ConnectionSessionDTOBuilder dtoBuilder = ConnectionSessionDTO.builder();
         dtoBuilder.session(sessionInfo);
         Connection conn;
-        
+
         if (StringUtils.isNotEmpty(sessionInfo.getSessionUUID())) {
             // Session already exists, reuse its connection
             conn = this.sessionManager.getConnection(sessionInfo);
@@ -1591,18 +1135,18 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
             // Lazy allocation: check if this is an XA or regular connection
             String connHash = sessionInfo.getConnHash();
             boolean isXA = sessionInfo.getIsXA();
-            
+
             if (isXA) {
                 // XA connection - check if unpooled or pooled mode
                 XADataSource xaDataSource = this.xaDataSourceMap.get(connHash);
-                
+
                 if (xaDataSource != null) {
                     // Unpooled XA mode: create XAConnection on demand
                     try {
                         log.debug("Creating unpooled XAConnection for hash: {}", connHash);
                         XAConnection xaConnection = xaDataSource.getXAConnection();
                         conn = xaConnection.getConnection();
-                        
+
                         // Store the XAConnection in session for XA operations
                         if (startSessionIfNone) {
                             SessionInfo updatedSession = this.sessionManager.createSession(sessionInfo.getClientUUID(), conn);
@@ -1624,7 +1168,7 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
             } else {
                 // Regular connection - check if pooled or unpooled mode
                 UnpooledConnectionDetails unpooledDetails = this.unpooledConnectionDetailsMap.get(connHash);
-                
+
                 if (unpooledDetails != null) {
                     // Unpooled mode: create direct connection without pooling
                     try {
@@ -1645,7 +1189,7 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
                     if (dataSource == null) {
                         throw new SQLException("No datasource found for connection hash: " + connHash);
                     }
-                    
+
                     try {
                         // Use enhanced connection acquisition with timeout protection
                         conn = ConnectionAcquisitionManager.acquireConnection(dataSource, connHash);
@@ -1653,12 +1197,12 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
                     } catch (SQLException e) {
                         log.error("Failed to acquire connection from pool for hash: {}. Error: {}",
                                 connHash, e.getMessage());
-                        
+
                         // Re-throw the enhanced exception from ConnectionAcquisitionManager
                         throw e;
                     }
                 }
-                
+
                 if (startSessionIfNone) {
                     SessionInfo updatedSession = this.sessionManager.createSession(sessionInfo.getClientUUID(), conn);
                     dtoBuilder.session(updatedSession);
@@ -1690,7 +1234,6 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
         String resultSetMode = "";
         boolean resultSetMetadataCollected = false;
 
-        forEachRow:
         while (rs.next()) {
             if (DbName.DB2.equals(dbName) && !resultSetMetadataCollected) {
                 this.collectResultSetMetadata(session, resultSetUUID, rs);
@@ -1701,7 +1244,7 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
             for (int i = 0; i < columnCount; i++) {
                 int colType = rs.getMetaData().getColumnType(i + 1);
                 String colTypeName = rs.getMetaData().getColumnTypeName(i + 1);
-                Object currentValue = null;
+                Object currentValue;
                 //Postgres uses type BYTEA which translates to type VARBINARY
                 switch (colType) {
                     case Types.VARBINARY: {
@@ -1773,7 +1316,7 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
 
             if ((DbName.DB2.equals(dbName) || DbName.SQL_SERVER.equals(dbName))
                     && CommonConstants.RESULT_SET_ROW_BY_ROW_MODE.equalsIgnoreCase(resultSetMode)) {
-                break forEachRow;
+                break;
             }
 
             if (row % CommonConstants.ROWS_PER_RESULT_SET_DATA_BLOCK == 0) {
@@ -1804,20 +1347,20 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
 
     @Override
     public void xaStart(com.openjproxy.grpc.XaStartRequest request, StreamObserver<com.openjproxy.grpc.XaResponse> responseObserver) {
-        log.debug("xaStart: session={}, xid={}, flags={}", 
+        log.debug("xaStart: session={}, xid={}, flags={}",
                 request.getSession().getSessionUUID(), request.getXid(), request.getFlags());
-        
+
         // Process cluster health changes before XA operation
         processClusterHealth(request.getSession());
-        
-        Session session = null;
-        
+
+        Session session;
+
         try {
             session = sessionManager.getSession(request.getSession());
             if (session == null || !session.isXA()) {
                 throw new SQLException("Session is not an XA session");
             }
-            
+
             // Branch based on XA pooling configuration
             if (xaPoolProvider != null) {
                 // **NEW PATH: Use XATransactionRegistry**
@@ -1829,41 +1372,40 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
 
         } catch (Exception e) {
             log.error("Error in xaStart", e);
-            
+
             // Provide additional context for Oracle XA errors
             String errorMsg = e.getMessage();
-            if (errorMsg != null && errorMsg.contains("ORA-")) {
-                if (errorMsg.contains("ORA-6550") || errorMsg.contains("ORA-24756") || errorMsg.contains("ORA-24757")) {
-                    log.error("Oracle XA Error: The database user may not have required XA privileges. " +
-                             "All of the following must be granted: " +
-                             "GRANT SELECT ON sys.dba_pending_transactions TO user; " +
-                             "GRANT SELECT ON sys.pending_trans$ TO user; " +
-                             "GRANT SELECT ON sys.dba_2pc_pending TO user; " +
-                             "GRANT EXECUTE ON sys.dbms_system TO user; " +
-                             "GRANT FORCE ANY TRANSACTION TO user; " +
-                             "Or for Oracle 12c+: GRANT XA_RECOVER_ADMIN TO user; " +
-                             "See ojp-server/ORACLE_XA_SETUP.md for details.");
-                }
+            if (errorMsg != null && errorMsg.contains("ORA-") && (errorMsg.contains("ORA-6550") || errorMsg.contains("ORA-24756") || errorMsg.contains("ORA-24757"))) {
+                log.error("Oracle XA Error: The database user may not have required XA privileges. " +
+                        "All of the following must be granted: " +
+                        "GRANT SELECT ON sys.dba_pending_transactions TO user; " +
+                        "GRANT SELECT ON sys.pending_trans$ TO user; " +
+                        "GRANT SELECT ON sys.dba_2pc_pending TO user; " +
+                        "GRANT EXECUTE ON sys.dbms_system TO user; " +
+                        "GRANT FORCE ANY TRANSACTION TO user; " +
+                        "Or for Oracle 12c+: GRANT XA_RECOVER_ADMIN TO user; " +
+                        "See ojp-server/ORACLE_XA_SETUP.md for details.");
             }
-            
-            SQLException sqlException = (e instanceof SQLException) ? (SQLException) e : new SQLException(e);
+
+
+            SQLException sqlException = e instanceof SQLException ex ? ex : new SQLException(e);
             sendSQLExceptionMetadata(sqlException, responseObserver);
         }
     }
-    
-    private void handleXAStartWithPooling(com.openjproxy.grpc.XaStartRequest request, Session session, 
+
+    private void handleXAStartWithPooling(com.openjproxy.grpc.XaStartRequest request, Session session,
                                           StreamObserver<com.openjproxy.grpc.XaResponse> responseObserver) throws Exception {
         String connHash = session.getSessionInfo().getConnHash();
         XATransactionRegistry registry = xaRegistries.get(connHash);
         if (registry == null) {
             throw new SQLException("No XA registry found for connection hash: " + connHash);
         }
-        
+
         // Convert proto Xid to XidKey
         XidKey xidKey = XidKey.from(convertXid(request.getXid()));
         int flags = request.getFlags();
         String ojpSessionId = session.getSessionInfo().getSessionUUID();
-        
+
         // Route based on XA flags
         if (flags == javax.transaction.xa.XAResource.TMNOFLAGS) {
             // New transaction: use existing session from OJP Session
@@ -1872,18 +1414,18 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
                 throw new SQLException("No XABackendSession found in session");
             }
             registry.registerExistingSession(xidKey, backendSession, flags, ojpSessionId);
-            
-        } else if (flags == javax.transaction.xa.XAResource.TMJOIN || 
-                   flags == javax.transaction.xa.XAResource.TMRESUME) {
+
+        } else if (flags == javax.transaction.xa.XAResource.TMJOIN ||
+                flags == javax.transaction.xa.XAResource.TMRESUME) {
             // Join or resume existing transaction: delegate to xaStart
             // This requires the context to exist (from previous TMNOFLAGS start)
             // Note: ojpSessionId is only used for TMNOFLAGS, but we pass it anyway for consistency
             registry.xaStart(xidKey, flags, ojpSessionId);
-            
+
         } else {
             throw new SQLException("Unsupported XA flags: " + flags);
         }
-        
+
         com.openjproxy.grpc.XaResponse response = com.openjproxy.grpc.XaResponse.newBuilder()
                 .setSession(session.getSessionInfo())
                 .setSuccess(true)
@@ -1892,16 +1434,16 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
         responseObserver.onNext(response);
         responseObserver.onCompleted();
     }
-    
+
     private void handleXAStartPassThrough(com.openjproxy.grpc.XaStartRequest request, Session session,
                                           StreamObserver<com.openjproxy.grpc.XaResponse> responseObserver) throws Exception {
         if (session.getXaResource() == null) {
             throw new SQLException("Session does not have XAResource");
         }
-        
+
         javax.transaction.xa.Xid xid = convertXid(request.getXid());
         session.getXaResource().start(xid, request.getFlags());
-        
+
         com.openjproxy.grpc.XaResponse response = com.openjproxy.grpc.XaResponse.newBuilder()
                 .setSession(session.getSessionInfo())
                 .setSuccess(true)
@@ -1913,15 +1455,15 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
 
     @Override
     public void xaEnd(com.openjproxy.grpc.XaEndRequest request, StreamObserver<com.openjproxy.grpc.XaResponse> responseObserver) {
-        log.debug("xaEnd: session={}, xid={}, flags={}", 
+        log.debug("xaEnd: session={}, xid={}, flags={}",
                 request.getSession().getSessionUUID(), request.getXid(), request.getFlags());
-        
+
         try {
             Session session = sessionManager.getSession(request.getSession());
             if (session == null || !session.isXA()) {
                 throw new SQLException("Session is not an XA session");
             }
-            
+
             // Branch based on XA pooling configuration
             if (xaPoolProvider != null) {
                 // **NEW PATH: Use XATransactionRegistry**
@@ -1930,7 +1472,7 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
                 if (registry == null) {
                     throw new SQLException("No XA registry found for connection hash: " + connHash);
                 }
-                
+
                 XidKey xidKey = XidKey.from(convertXid(request.getXid()));
                 registry.xaEnd(xidKey, request.getFlags());
             } else {
@@ -1941,7 +1483,7 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
                 javax.transaction.xa.Xid xid = convertXid(request.getXid());
                 session.getXaResource().end(xid, request.getFlags());
             }
-            
+
             com.openjproxy.grpc.XaResponse response = com.openjproxy.grpc.XaResponse.newBuilder()
                     .setSession(session.getSessionInfo())
                     .setSuccess(true)
@@ -1952,27 +1494,27 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
 
         } catch (Exception e) {
             log.error("Error in xaEnd", e);
-            SQLException sqlException = (e instanceof SQLException) ? (SQLException) e : new SQLException(e);
+            SQLException sqlException = e instanceof SQLException ex ? ex : new SQLException(e);
             sendSQLExceptionMetadata(sqlException, responseObserver);
         }
     }
 
     @Override
     public void xaPrepare(com.openjproxy.grpc.XaPrepareRequest request, StreamObserver<com.openjproxy.grpc.XaPrepareResponse> responseObserver) {
-        log.debug("xaPrepare: session={}, xid={}", 
+        log.debug("xaPrepare: session={}, xid={}",
                 request.getSession().getSessionUUID(), request.getXid());
-        
+
         // Process cluster health changes before XA operation
         processClusterHealth(request.getSession());
-        
+
         try {
             Session session = sessionManager.getSession(request.getSession());
             if (session == null || !session.isXA()) {
                 throw new SQLException("Session is not an XA session");
             }
-            
+
             int result;
-            
+
             // Branch based on XA pooling configuration
             if (xaPoolProvider != null) {
                 // **NEW PATH: Use XATransactionRegistry**
@@ -1981,7 +1523,7 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
                 if (registry == null) {
                     throw new SQLException("No XA registry found for connection hash: " + connHash);
                 }
-                
+
                 XidKey xidKey = XidKey.from(convertXid(request.getXid()));
                 result = registry.xaPrepare(xidKey);
             } else {
@@ -1992,7 +1534,7 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
                 javax.transaction.xa.Xid xid = convertXid(request.getXid());
                 result = session.getXaResource().prepare(xid);
             }
-            
+
             com.openjproxy.grpc.XaPrepareResponse response = com.openjproxy.grpc.XaPrepareResponse.newBuilder()
                     .setSession(session.getSessionInfo())
                     .setResult(result)
@@ -2002,25 +1544,25 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
 
         } catch (Exception e) {
             log.error("Error in xaPrepare", e);
-            SQLException sqlException = (e instanceof SQLException) ? (SQLException) e : new SQLException(e);
+            SQLException sqlException = e instanceof SQLException ex ? ex : new SQLException(e);
             sendSQLExceptionMetadata(sqlException, responseObserver);
         }
     }
 
     @Override
     public void xaCommit(com.openjproxy.grpc.XaCommitRequest request, StreamObserver<com.openjproxy.grpc.XaResponse> responseObserver) {
-        log.debug("xaCommit: session={}, xid={}, onePhase={}", 
+        log.debug("xaCommit: session={}, xid={}, onePhase={}",
                 request.getSession().getSessionUUID(), request.getXid(), request.getOnePhase());
-        
+
         // Process cluster health changes before XA operation
         processClusterHealth(request.getSession());
-        
+
         try {
             Session session = sessionManager.getSession(request.getSession());
             if (session == null || !session.isXA()) {
                 throw new SQLException("Session is not an XA session");
             }
-            
+
             // Branch based on XA pooling configuration
             if (xaPoolProvider != null) {
                 // **NEW PATH: Use XATransactionRegistry**
@@ -2029,10 +1571,10 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
                 if (registry == null) {
                     throw new SQLException("No XA registry found for connection hash: " + connHash);
                 }
-                
+
                 XidKey xidKey = XidKey.from(convertXid(request.getXid()));
                 registry.xaCommit(xidKey, request.getOnePhase());
-                
+
                 // NOTE: Do NOT unbind XAConnection here - it stays bound for session lifetime
                 // XABackendSession will be returned to pool when OJP Session terminates
             } else {
@@ -2043,7 +1585,7 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
                 javax.transaction.xa.Xid xid = convertXid(request.getXid());
                 session.getXaResource().commit(xid, request.getOnePhase());
             }
-            
+
             com.openjproxy.grpc.XaResponse response = com.openjproxy.grpc.XaResponse.newBuilder()
                     .setSession(session.getSessionInfo())
                     .setSuccess(true)
@@ -2054,22 +1596,22 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
 
         } catch (Exception e) {
             log.error("Error in xaCommit", e);
-            SQLException sqlException = (e instanceof SQLException) ? (SQLException) e : new SQLException(e);
+            SQLException sqlException = e instanceof SQLException ex ? ex : new SQLException(e);
             sendSQLExceptionMetadata(sqlException, responseObserver);
         }
     }
 
     @Override
     public void xaRollback(com.openjproxy.grpc.XaRollbackRequest request, StreamObserver<com.openjproxy.grpc.XaResponse> responseObserver) {
-        log.debug("xaRollback: session={}, xid={}", 
+        log.debug("xaRollback: session={}, xid={}",
                 request.getSession().getSessionUUID(), request.getXid());
-        
+
         try {
             Session session = sessionManager.getSession(request.getSession());
             if (session == null || !session.isXA()) {
                 throw new SQLException("Session is not an XA session");
             }
-            
+
             // Branch based on XA pooling configuration
             if (xaPoolProvider != null) {
                 // **NEW PATH: Use XATransactionRegistry**
@@ -2078,10 +1620,10 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
                 if (registry == null) {
                     throw new SQLException("No XA registry found for connection hash: " + connHash);
                 }
-                
+
                 XidKey xidKey = XidKey.from(convertXid(request.getXid()));
                 registry.xaRollback(xidKey);
-                
+
                 // NOTE: Do NOT unbind XAConnection here - it stays bound for session lifetime
                 // XABackendSession will be returned to pool when OJP Session terminates
             } else {
@@ -2092,7 +1634,7 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
                 javax.transaction.xa.Xid xid = convertXid(request.getXid());
                 session.getXaResource().rollback(xid);
             }
-            
+
             com.openjproxy.grpc.XaResponse response = com.openjproxy.grpc.XaResponse.newBuilder()
                     .setSession(session.getSessionInfo())
                     .setSuccess(true)
@@ -2103,37 +1645,37 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
 
         } catch (Exception e) {
             log.error("Error in xaRollback", e);
-            SQLException sqlException = (e instanceof SQLException) ? (SQLException) e : new SQLException(e);
+            SQLException sqlException = e instanceof SQLException ex ? ex : new SQLException(e);
             sendSQLExceptionMetadata(sqlException, responseObserver);
         }
     }
 
     @Override
     public void xaRecover(com.openjproxy.grpc.XaRecoverRequest request, StreamObserver<com.openjproxy.grpc.XaRecoverResponse> responseObserver) {
-        log.debug("xaRecover: session={}, flag={}", 
+        log.debug("xaRecover: session={}, flag={}",
                 request.getSession().getSessionUUID(), request.getFlag());
-        
+
         try {
             Session session = sessionManager.getSession(request.getSession());
             if (session == null || !session.isXA() || session.getXaResource() == null) {
                 throw new SQLException("Session is not an XA session");
             }
-            
+
             javax.transaction.xa.Xid[] xids = session.getXaResource().recover(request.getFlag());
-            
+
             com.openjproxy.grpc.XaRecoverResponse.Builder responseBuilder = com.openjproxy.grpc.XaRecoverResponse.newBuilder()
                     .setSession(session.getSessionInfo());
-            
+
             for (javax.transaction.xa.Xid xid : xids) {
                 responseBuilder.addXids(convertXidToProto(xid));
             }
-            
+
             responseObserver.onNext(responseBuilder.build());
             responseObserver.onCompleted();
 
         } catch (Exception e) {
             log.error("Error in xaRecover", e);
-            SQLException sqlException = (e instanceof SQLException) ? (SQLException) e : new SQLException(e);
+            SQLException sqlException = (e instanceof SQLException ex) ? ex : new SQLException(e);
             sendSQLExceptionMetadata(sqlException, responseObserver);
         }
     }
@@ -2145,24 +1687,24 @@ public class StatementServiceImpl extends StatementServiceGrpc.StatementServiceI
     }
 
     @Override
-    public void xaSetTransactionTimeout(com.openjproxy.grpc.XaSetTransactionTimeoutRequest request, 
+    public void xaSetTransactionTimeout(com.openjproxy.grpc.XaSetTransactionTimeoutRequest request,
                                         StreamObserver<com.openjproxy.grpc.XaSetTransactionTimeoutResponse> responseObserver) {
-        new org.openjproxy.grpc.server.action.transaction.XaSetTransactionTimeoutAction(sessionManager)
-                .execute(request, responseObserver);
+        org.openjproxy.grpc.server.action.transaction.XaSetTransactionTimeoutAction.getInstance()
+                .execute(actionContext, request, responseObserver);
     }
 
     @Override
-    public void xaGetTransactionTimeout(com.openjproxy.grpc.XaGetTransactionTimeoutRequest request, 
+    public void xaGetTransactionTimeout(com.openjproxy.grpc.XaGetTransactionTimeoutRequest request,
                                         StreamObserver<com.openjproxy.grpc.XaGetTransactionTimeoutResponse> responseObserver) {
-        new org.openjproxy.grpc.server.action.transaction.XaGetTransactionTimeoutAction(sessionManager)
-                .execute(request, responseObserver);
+        org.openjproxy.grpc.server.action.transaction.XaGetTransactionTimeoutAction.getInstance()
+                .execute(actionContext, request, responseObserver);
 
     }
 
     @Override
-    public void xaIsSameRM(com.openjproxy.grpc.XaIsSameRMRequest request, 
+    public void xaIsSameRM(com.openjproxy.grpc.XaIsSameRMRequest request,
                            StreamObserver<com.openjproxy.grpc.XaIsSameRMResponse> responseObserver) {
-        new org.openjproxy.grpc.server.action.transaction.XaIsSameRMAction(sessionManager)
-                .execute(request, responseObserver);
+        org.openjproxy.grpc.server.action.transaction.XaIsSameRMAction.getInstance()
+                .execute(actionContext, request, responseObserver);
     }
 }
